# Haskell-Chess

./: .gitignore  Board.hs  CHANGELOG.md  Chess.cabal  Chess.hs  LICENSE  State.hs  Types.hs  Utils.hs  skeleton1.hs
src/: AI.hs  Board.hs  Chess.hs  Main.hs  Move.hs  Parsing.hs  Position.hs  State.hs  Types.hs  Utils.hs
