name:                Chess
version:             0.1.0.0
synopsis:            FP programming project 2019-2020
author:              Aaron Lippeveldts
maintainer:          aaron.joos.lippeveldts@vub.be
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Chess
  main-is:             Main.hs
  other-modules: AI Board Chess Move Position Types Utils Parsing

  build-depends:       base >=4.12 && <4.13,
                       gloss >= 1.13,
                       bmp >= 1.2,
                       array >= 0.5,
                       parsec >= 3.1,
                       parallel >= 3.2,
                       deepseq >= 1.4

  ghc-options:         -O3
                       -threaded
                       -fno-full-laziness
  -- https://gitlab.haskell.org/ghc/ghc/issues/917
                       -with-rtsopts=-N2

  hs-source-dirs:      src
  default-language:    Haskell2010
